Resolved carousel displaying indicators behind button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,6 +29,10 @@
     padding-top: 0 !important;
 }
 
+.indicators {
+    display:none;
+}
+
 /* CSS code from Materialize for sticky footer */
 body {
     display: flex;
